# follicle-assessment

./: .gitignore  README.md  env.yml  pyproject.toml  requirements.txt
main/: compute_depth.py  create_classif_train_dataset.py  generate_patches_stride_train_val.py  infer_train_yolo.py  naive_precision_control.py  predict_detr_with_depth.py  predict_effdet_with_depth.py  predict_effdet_with_depth_and_classif.py  predict_efficientdet.py  predict_efficientdet_with_depth.py  predict_yolo_with_depth_and_classif.py  run_ltt.py  train_classif.py  train_classif_with_pytorch.py  train_classifier.py  train_effdet.py  train_efficientdet.py  train_yolo.py
notebooks/: analyse_ltt.ipynb  analyse_ltt_effdet.ipynb  analyse_ltt_yolo.ipynb  coco_to_yolo_dataset.ipynb  depth_analysis.ipynb  eigen_cam_yolo_folcon.ipynb  evaluate_model.ipynb  viz_one_cut_with_annots.ipynb
utils/: classifier_utils.py  depths_utils.py  img_read_utils.py  ltt_utils.py  metrics.py  patch_utils.py
utils/efficientdet/: data.py  dataset.py  efficientdet.py
