[tool.poetry]
name = "follicle-assessment"
version = "0.1.0"
description = ""
authors = ["vincentblot28 <vincentblot28@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
ultralytics = "^8.2.2"
patchify = "^0.2.3"
opencv-python = "^4.9.0.80"
numpy = "^1.26.4"
mapie = "^0.8.3"
ipykernel = "^6.29.4"
tqdm = "^4.66.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
