[tool.poetry]
name = "follicle-assessment"
version = "0.1.0"
description = ""
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
ultralytics = "^8.2.2"
patchify = "^0.2.3"
opencv-python = "^4.9.0.80"
numpy = "^1.26.4"
mapie = "^0.8.3"
ipykernel = "^6.29.4"
tqdm = "^4.66.2"
jupyter = "^1.0.0"
ttach = "^0.0.3"
yolov8-explainer = "^0.0.5"
torchvision = "^0.18.1"
scikit-image = "^0.24.0"
imagecodecs = "^2024.6.1"
pytorch-lightning = "^2.3.0"
tensorflow = "^2.16.1"
dill = "^0.3.8"
object-detection-fastai = "^0.0.10"
openslide-python = "^1.3.1"
nibabel = "^5.2.1"
pandas = "^2.2.2"
fastai = "1.0.61"
pycocotools = "^2.0.8"
albumentations = "^1.4.10"
effdet = "^0.4.1"
ensemble-boxes = "^1.0.9"
objdetecteval = {git = "https://github.com/alexhock/object-detection-metrics"}
latex = "^0.7.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
